# giggity

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
apps/web/: .dockerignore  Dockerfile  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/signin/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: InstallPrompt.tsx
apps/web/src/components/dashboard/: LiveWeatherForecastDashboard.tsx  MvpJourneyStepper.tsx
apps/web/src/components/ui/: Button.tsx  Input.tsx
apps/web/src/lib/: auth.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/services/: claims_service.py  forcast_service.py  forecast_service.py  fraud_service.py  risk_engine.py  trigger_service.py
backend/ml/: zone_training_data.csv
docs/testing/: collectivePricing.md
gps-spoof-detector/: App.js  app.json  package-lock.json  package.json
gps-spoof-detector/app/(tabs)/: index.tsx
gps-spoof-detector/src/components/: LocationCard.js
gps-spoof-detector/src/services/: locationService.js
gps-spoof-detector/src/utils/: formatLocation.js
ml/: build_dataset.py
