[project]
name = "backend"
version = "0.1.0"
description = "giggity backend"
authors = [
    {name = "Giggity"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "bcrypt (==3.2.0)",
    "apscheduler (>=3.10.0,<4.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
